--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
     ports:
       - "3002:3000"
     environment:
-      NUXT_PUBLIC_API_BASE: "http://localhost:3003/api"
-      NUXT_PUBLIC_API_PARENT: "http://localhost:3003"
+      NUXT_PUBLIC_API_BASE: "http://backend:3003/api"
+      NUXT_PUBLIC_API_PARENT: "http://backend:3003"
 
   frontend_client:
     build: pharma-tech
@@ -49,7 +49,7 @@ services:
     ports:
       - "3001:3001"
     environment:
-      NUXT_PUBLIC_API_BASE: "http://localhost:3003"
+      NUXT_PUBLIC_API_BASE: "http://backend:3003"
 
 volumes:
   pgdata:
